--- a/src/components/ui/Navbar/Navbar.css
+++ b/src/components/ui/Navbar/Navbar.css
@@ -7,7 +7,7 @@
 .nav_a {
   display: inline-block;
   text-decoration: none;
-  color: black;
+  color: white;
   font-family: sans-serif;
 }
 
@@ -15,7 +15,7 @@
   display: block;
   content: "";
   width: inherit;
-  border-bottom: solid 2px black;
+  border-bottom: solid 2px white;
   transform: scaleX(0);
   transition: transform 250ms ease-in-out;
 }
