--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,26 @@
 ::-webkit-scrollbar-thumb:hover {
   background: #246dce;
 }
+
+.arrow {
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  fill: #fff;
+  cursor: pointer;
+}
+
+.arrow--left {
+  left: 5px;
+}
+
+.arrow--right {
+  left: auto;
+  right: 5px;
+}
+.navigation-wrapper {
+  position: relative;
+}
