--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ body {
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #6a0dad;
+  background: #6366f1;
   border-radius: 100vh;
   border: 3px solid #edf2f7;
 }
