Blog section update

--- a/src/index.css
+++ b/src/index.css
@@ -13,8 +13,8 @@
   height: 16px;
 }
 body {
-  background: black;
-  color: white;
+  /* background: black;
+  color: white; */
   scrollbar-width: thin;
 }
 
