--- a/src/index.css
+++ b/src/index.css
@@ -7,18 +7,21 @@
 .section-container {
   @apply w-[95%] md:w-[90%] xl:w-[1200px] 2xl:w-[1320px] mx-auto;
 }
+
 /* width */
 ::-webkit-scrollbar {
   width: 15px;
   height: 16px;
 }
+
 body {
   /* background: black;
   color: white; */
   scrollbar-width: thin;
+  scroll-behavior: smooth;
 }
 
-.b{
+.b {
   border: 2px solid red;
 }
 
@@ -59,6 +62,7 @@ body {
   left: auto;
   right: 5px;
 }
+
 .navigation-wrapper {
   position: relative;
 }
